[metadata]
description-file = README.md

[build_manpages]
manpages =
    man/mtf.1:function=mtfparser:module=moduleframework.mtf_scheduler
    man/mtf-generator.1:function=cliparser:module=moduleframework.mtf_generator
    man/mtf-env-set.1:function=cliparser_mtfenvset:module=moduleframework.mtf_environment
    man/mtf-env-clean.1:function=cliparser_mtfenvclean:module=moduleframework.mtf_environment

